feat(site-config): add offer display metrics
